--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Second Repo</title>
 </head>
 <body>
-    
+    <h1>I can push to github now</h1>
+    <h2>what can I do now?</h2>
+    <h3>new code changed</h3>
 </body>
 </html>
