--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>new code changed</h3>
     <p>More paragraph</p>
     <p>I am coding</p>
+
+    <b>Uploading with terminal</b>
 </body>
 </html>
