--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 
     <b>Uploading with terminal</b>
     <small>hi, terminal again.</small>
+
+    <img src="tom-cruis.jpeg" alt="tom cruise">
 </body>
 </html>
