--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <small>hi, terminal again.</small>
 
     <img src="tom-cruis.jpeg" alt="tom cruise">
+    <br>
+    <img src="deCap.jpeg" alt="I am de Cap">
 </body>
 </html>
